--- a/src/assets/develop/CUR - Currency.yaml
+++ b/src/assets/develop/CUR - Currency.yaml
@@ -1,10 +1,10 @@
 # 
 # Version
 # 
-version: Westfield - McDonalds
+version: 85
 parentVersion: 0 
-code: COU
-kind: Utility
+code: CUR
+kind: Currency
 
 metadata:
   label: Version
