--- a/src/protocol/develop/C3 - Contract Amendment.yaml
+++ b/src/protocol/develop/C3 - Contract Amendment.yaml
@@ -1,130 +1,150 @@
-#
-# C3 - Contract Amendment Action
-#
+# 
+# Contract Amendment Action: the issuer can initiate an amendment to the contract establishment metadata.  This can be due to a change of name, change of contract terms, change of authorizations, or change of the URI.  The ability to make an amendment to the contract is limited by the Authorization Flag set on the previous Contract Formation action.  The Authorization Flags can be set to allow Contract Amendments, but only if a Token Owner vote has passed in favour of making the Amendment. Contract revision/protocol identifier and action prefix can't be amended.  The rest of the fields are open to change.  However, the Issuer is responsible for acting lawfully (in their jurisdiction) and in accordance with the terms of the Investment Contract.
+# 
 
 code: C3
 
 metadata:
   name: ContractAmendment
   label: Contract Amendment Action
-  description: "The issuer can initiate an amendment to the contract establishment metadata. This can be due to a change of name, change of contract terms, change of authorizations, or change of the URI. The ability to make an amendment to the contract is limited by the Authorization Flag set on the previous Contract Formation action. The Authorization Flags can be set to allow Contract Amendments, but only if a Token Owner vote has passed in favour of making the Amendment. Contract revision/protocol identifier and action prefix can't be amended. The rest of the fields are open to change. However, the Issuer is responsible for acting lawfully (in their jurisdiction) and in accordance with the terms of the Investment Contract."
-  validation: ContractFormation
+  description: "Contract Amendment Action -  the issuer can initiate an amendment to the contract establishment metadata.  This can be due to a change of name, change of contract terms, change of authorizations, or change of the URI.  The ability to make an amendment to the contract is limited by the Authorization Flag set on the previous Contract Formation action.  The Authorization Flags can be set to allow Contract Amendments, but only if a Token Owner vote has passed in favour of making the Amendment. Contract revision/protocol identifier and action prefix can't be amended.  The rest of the fields are open to change.  However, the Issuer is responsible for acting lawfully (in their jurisdiction) and in accordance with the terms of the Investment Contract."
+  validation: AssetCreation
   rejection: Rejection
 
 rules:
-  fee: 4000
+  fee:
   inputs:
-    - name: Issuer
-      label: "Issuer's Public Address"
-      
+    - name: 
+      label: Issuer's Public Address
+      comments: 
+
+    - name: 
+      label: New Issuer Public Address
+      comments: Only treated as the new Issuer address when the Change Issuer Address flag is set to Y.
+
   outputs:
-    - name: Contract
-      label: "Contract Public Address"
-   
-    - name: Issuer
-      label: "Issuer's Public Address"
-      description: "Change"
+    - name: 
+      label: Contract Public Address
+      comments: 
+
+    - name: 
+      label: Issuer's Public Address
+      comments: Change
+
+    - name: 
+      label: OP_RETURN (Contract Amendment Action)
+      comments: Only one Tokenized action (excluding Message actions) per txn.  Action payload is always the last index of the txn outputs.  There is no limit to the number of M1 (message) actions per txn. 
+
+    - name: 
+      label: Miner's Fee
+      comments: ~550-1000 Bytes to account for return data and txn data.
 
 fields:
-  - name: ActionPrefix
-    label: "Action Prefix"
-    description: "Contract Amendment"
-    type: STRING
-    size: 2
+  - name: PUSHDATAINSTRUCTION
+    label: Push Data
+    description: "PUSHDATA 13 bytes for Protocol Identifer"
+    type: opcode
+    size: 1
+    example hex: 0d
+    example value: "13"
+    notes: "Cannot be changed by issuer, operator, or smart contract."
+
+  - name: ProtocolID
+    label: Protocol Identifier
+    description: "Tokenized ID Prefix.  tokenized.com"
+    type: string
+    size: 13
+    example hex: 746f6b656e697a65642e636f6d
+    example value: "tokenized.com"
+    notes: ""
+
+  - name: OP_PUSHDATA
+    label: Push Data
+    description: "PACKET LENGTH, PUSHDATA1 (76), PUSHDATA2 (77), or PUSHDATA4 (78) depending on total size of action payload."
+    type: opcode
+    size: 
+    example hex: 
+    example value: ""
+    notes: "Cannot be changed by issuer, operator or smart contract."
+
+  - name: LenActionPayload
+    label: Length of Action Payload
+    description: "Length of the action message (0 - 65,535 bytes). 0 if pushdata length <76B, 1 byte if PUSHDATA1 is used, 2 bytes if PUSHDATA2 and 4 bytes if PUSHDATA4."
+    type: pushdata_length
+    size: 1
+    example hex: 43
+    example value: "67"
+    notes: "Depends on Action Payload"
 
   - name: Version
-    label: "Version"
-    description: "255 reserved for additional versions"
-    type: UINT
+    label: Version
+    description: "255 reserved for additional versions. Tokenized protocol versioning."
+    type: uint8
     size: 1
+    example hex: 0
+    example value: "0"
+    notes: "Can be changed by Issuer or Operator at their discretion.  Smart Contract will reject if it hasn't been updated to interpret the version."
 
-  - name: ContractName
-    label: "Contract Name"
-    description: "Can be any unique identifying string, including human readable names for branding/vanity purposes.   [Contract identifier (instance) is the bitcoin public address. If the Public Address is lost. Then the issuer will have to reissue the entire contract, Asset definition and tokens with the new public address.]. Smart contracts can be branded and specialized to suit any terms and conditions.  The example in this case is a proprietary Ordinary Share Smart Contract developed by Tokenized for funds."
-    type: STRING
-    size: 32
-    required: true
+  - name: ActionPrefix
+    label: Action Prefix
+    description: "Contract Amendment: The issuer can request amendments to the Contract.  If the amendments don't violate any terms and conditions then the smart contract will respond with a new Contract Formation Action that reflects the requested amendments and increment the Contract Formation Action's revision by 1.   Otherwise the smart contract will respond with a Rejection Action."
+    type: string
+    size: 2
+    example hex: 4333
+    example value: "C3"
+    notes: "Cannot be changed by issuer, operator or smart contract."
 
-  - name: ContractFileHash
-    label: "Contract File Hash"
-    description: "SHA-256 hash of the Contract file specific to the smart contract and relevant Assets.  Legal and technical information. (pdf)"
-    type: SHA
-    size: 32
+  - name: TextEncoding
+    label: Text Encoding
+    description: " 0 = ASCII, 1 = UTF-8, 2 = UTF-16, 3 = Unicode.  Encoding applies to all 'text' data types. All 'string' types will always be encoded with ASCII.  Where string is selected, all fields will be ASCII."
+    type: uint8
+    size: 1
+    example hex: 0
+    example value: "0"
+    notes: "Can be changed by Issuer or Operator at their discretion."
 
-  - name: GoverningLaw
-    label: "Governing Law"
-    description: "5 Letter Code to Identify which governing law the contract will adhere to.  Disputes are to be settled by this law in the jurisdiction specified below. Private dispute resolution organizations can be used as well.  A custom code just needs to be defined."
-    type: STRING
-    size: 5
-
-  - name: Jurisdiction
-    label: "Jurisdiction"
-    description: "Legal proceedings/arbitration will take place using the specified Governing Law in this location."
-    type: STRING
-    size: 5
-
-  - name: ContractExpiration
-    label: "Contract Expiration"
-    description: "All actions related to the contract will cease to work after this timestamp. The smart contract will stop running.  This will allow many token use cases to be able to calculate smart contract running costs. Eg. an issuer is creating tickets for an event on the 5th of June 2018.  The smart contract will facilitate exchange and issue transactions up until the 6th of June.  Wallets can use this to forget tokens that are no longer valid."
-    type: TIME
-    size: 8
-
-  - name: URI
-    label: "URI"
-    description: "Points to an information page that also has a copy of the Contract.  Anyone can go to the website to have a look at the price/token, information about the Issuer (company), information about the Asset, legal information, etc.  There will also be a way for Token Owners to vote on this page and contact details with the Issuer/tokenized companies. Could be an IPFS address (hash) or txn-id for on chain information using OP_PUSHDATA/OP_DROP."
-    type: STRING
-    size: 70
+  - name: ChangeIssuerAddress
+    label: Change Issuer Address
+    description: "Y - Yes, N - No.  Used to change the issuer address.  The new issuer address must be in the input[1] position."
+    type: string
+    size: 1
+    example hex: 59
+    example value: "Y"
+    notes: ""
 
   - name: ContractRevision
-    label: "Contract Revision"
+    label: Contract Revision
     description: "Counter 0 - 65,535"
-    type: UINT
+    type: uint16
     size: 2
+    example hex: 0000
+    example value: "0"
+    notes: ""
 
-  - name: IssuerID
-    label: "Issuer ID"
-    description: "Issuing entity (company, organization, individual).  Can be any unique identifying string, including human readable names for branding/vanity purposes. (Example value could represent Vanguard Australia Residential Real Estate Fund for Retail Investors) "
-    type: STRING
-    size: 16
-
-  - name: IssuerType
-    label: "Issuer Type"
-    description: "O - Public Company Limited by Shares, P - Private Company Limited by Shares"
-    type: STRING
+  - name: AmendmentsCount
+    label: AmendmentsCount
+    description: "Number of Amendments. Must be less than the max Subfield Index of CF."
+    type: uint8
     size: 1
+    example hex: 01
+    example value: "1"
+    notes: ""
 
-  - name: ContractOperatorID
-    label: "Contract Operator ID"
-    description: "Smart Contract Operator identifier. Can be any unique identifying string, including human readable names for branding/vanity purposes. Can also be null or the Issuer."
-    type: STRING
-    size: 16
+  - name: SubfieldX
+    label: Subfield X
+    description: "Subfield to be amended."
+    type: nvarchar8
+    size: 14
+    example hex: 0d52656769737472794e616d6532
+    example value: "RegistryName2"
+    notes: ""
 
-  - name: AuthorizationFlags
-    label: "Authorization Flags"
-    description: "16 Authorization Flags"
-    type: BIN
-    size: 2
+  - name: AmendmentX
+    label: Amendment
+    description: "New data for the amended subfield. Data type determinded by the subfield index."
+    type: nvarchar32
+    size: 13
+    example hex: 00000009546f6b656e697a6564
+    example value: "Tokenized"
+    notes: ""
 
-  - name: VotingSystem
-    label: "Voting System"
-    description: "Contract-wide voting system. (M - Majority vote, A - Absolute Majority, P - Plurality, S - Supermajority, C - Absolute Supermajority, N - No Voting Rights, etc.) See Voting Sheet for details."
-    type: STRING
-    size: 1
-
-  - name: InitiativeThreshold
-    label: "Initiative Threshold"
-    description: "Token Owners must pay the threshold amount to broadcast a valid Initiative.  If the Initiative action is valid, the smart contract will start a vote."
-    type: FLOAT
-    size: 4
-
-  - name: InitiativeThresholdCurrency
-    label: "Initiative Threshold Currency"
-    description: "Currency.  Always paid in BCH at current market valuations in the currency specified."
-    type: STRING
-    size: 3
-
-  - name: RestrictedQty
-    label: "Restricted Qty"
-    description: "Number of Assets (non-fungible). 0 if unlimited which will display an infinity symbol in UI"
-    type: UINT
-    size: 8
