--- a/src/protocol/develop/E4 - Confiscation.yaml
+++ b/src/protocol/develop/E4 - Confiscation.yaml
@@ -1,78 +1,123 @@
-#
-# E4 - Confiscation Action
-#
+# 
+# Confiscation Action: to be used to comply with contractual obligations and/or legal requirements.
+# 
 
 code: E4
 
 metadata:
   name: Confiscation
   label: Confiscation Action
-  description: "To be used to comply with contractual obligations and/or legal requirements."
+  description: "Confiscation Action -  to be used to comply with contractual obligations and/or legal requirements."
+  validation: AssetCreation
+  rejection: Rejection
 
 rules:
-  fee: 546
-  inputs: 
-    - name: Contract
-      label: "Contract Public Address"
+  fee:
+  inputs:
+    - name: 
+      label: Contract Public Address
+      comments: 
 
   outputs:
-    - name: User
-      label: "Target Public Address"
-      description: "Dust limit rule minimum value output of 546"
+    - name: 
+      label: Target Public Address
+      comments: Can be the Contract Address for a 'Contract-wide' Contract-wide Confiscation.
 
-    - name: Deposit
-      label: "Deposit Public Address"
-      description: "Dust limit rule minimum value output of 546"
+    - name: 
+      label: Deposit Public Address
+      comments: Dust limit rule minimum value output of 546
 
-    - name: Contract
-      label: "Contract Public Address"
-      description: "Change, minimum 546"
+    - name: 
+      label: Contract Fee Address
+      comments: Contract Operator's Fee
+
+    - name: 
+      label: OP_RETURN (Confiscation Action)
+      comments: Only one Tokenized action (excluding Message actions) per txn.  Action payload is always the last index of the txn outputs.  There is no limit to the number of M1 (message) actions per txn. 
+
+    - name: 
+      label: Miner's Fee
+      comments: ~550-1000 Bytes to account for return data and txn data.
 
 fields:
-  - name: ActionPrefix
-    label: "Action Prefix"
-    description: "Confiscation"
-    type: STRING
-    size: 2
+  - name: PUSHDATAINSTRUCTION
+    label: Push Data
+    description: "PUSHDATA 13 bytes for Protocol Identifer"
+    type: opcode
+    size: 1
+    example hex: 0d
+    example value: "13"
+    notes: "Cannot be changed by issuer, operator, or smart contract."
+
+  - name: ProtocolID
+    label: Protocol Identifier
+    description: "Tokenized ID Prefix.  tokenized.com"
+    type: string
+    size: 13
+    example hex: 746f6b656e697a65642e636f6d
+    example value: "tokenized.com"
+    notes: ""
+
+  - name: OP_PUSHDATA
+    label: Push Data
+    description: "PACKET LENGTH, PUSHDATA1 (76), PUSHDATA2 (77), or PUSHDATA4 (78) depending on total size of action payload."
+    type: opcode
+    size: 
+    example hex: aN
+    example value: ""
+    notes: "Cannot be changed by issuer, operator or smart contract."
+
+  - name: LenActionPayload
+    label: Length of Action Payload
+    description: "Length of the action message (0 - 65,535 bytes). 0 if pushdata length <76B, 1 byte if PUSHDATA1 is used, 2 bytes if PUSHDATA2 and 4 bytes if PUSHDATA4."
+    type: pushdata_length
+    size: 1
+    example hex: 1d
+    example value: "29"
+    notes: "Depends on Action Payload"
 
   - name: Version
-    label: "Version"
-    description: "For data parsing/interpretation in the event of protocol upgrades."
-    type: UINT
+    label: Version
+    description: "255 reserved for additional versions. Tokenized protocol versioning."
+    type: uint8
     size: 1
+    example hex: 00
+    example value: "0"
+    notes: "Can be changed by Issuer or Operator at their discretion.  Smart Contract will reject if it hasn't been updated to interpret the version."
 
-  - name: AssetType
-    label: "Asset Type"
-    description: "eg. Share, Bond, Ticket"
-    type: STRING
-    size: 3
-
-  - name: AssetID
-    label: "Asset ID"
-    description: "Randomly generated base58 string.  Each Asset ID should be unique.  However, a Asset ID is always linked to a Contract that is identified by the public address of the Contract wallet. The Asset Type can be the leading bytes - a convention - to make it easy to identify that it is a token by humans."
-    type: STRING
-    size: 32
+  - name: ActionPrefix
+    label: Action Prefix
+    description: "Confiscation: The smart contract confiscates tokens from a token holder and deposits them into an account specified by the Order Action.  This action can be used by the issuer to manually correct 'bookkeeping' mistakes, for whatever reason."
+    type: string
+    size: 2
+    example hex: 4534
+    example value: "E4"
+    notes: "Cannot be changed by issuer, operator or smart contract."
 
   - name: Timestamp
-    label: "Timestamp"
+    label: Timestamp
     description: "Timestamp of when the smart contract created the Confiscation action."
-    type: TIME
+    type: time
     size: 8
+    example hex: 0000016331e3c200
+    example value: "Sun May 06 2018 06:00:00 GMT+1000 (AEST)"
+    notes: ""
 
-  - name: TargetsQty
-    label: "Target's Qty"
-    description: "Offender's token balance after confiscation."
-    type: UINT
+  - name: QtyofAddresses
+    label: Qty of Addresses
+    description: "0 - 65,535 bytes"
+    type: uint8
+    size: 2
+    example hex: aN
+    example value: ""
+    notes: ""
+
+  - name: AddressXQty
+    label: AddressXQty
+    description: "Token balance at the target address x after confiscation."
+    type: uint64
     size: 8
+    example hex: 0000000000002710
+    example value: "10000"
+    notes: ""
 
-  - name: DepositsQty
-    label: "Deposit's Qty"
-    description: "Custodian's token balance after confiscation."
-    type: UINT
-    size: 8
-
-  - name: Message
-    label: "Message"
-    description: "Explanation. No personal information to be given away.  Privacy to be respected as much as possible."
-    type: STRING
-    size: 61
