--- a/src/protocol/develop/E5 - Reconciliation.yaml
+++ b/src/protocol/develop/E5 - Reconciliation.yaml
@@ -1,74 +1,110 @@
-#
-# E5 - Reconciliation Action
-#
+# 
+# Reconciliation Action: to be used at the direction of the issuer to fix record keeping errors with bitcoin and token balances.
+# 
 
 code: E5
 
 metadata:
   name: Reconciliation
   label: Reconciliation Action
-  description: "To be used at the direction of the issuer to fix record keeping errors with bitcoin and token balances."
+  description: "Reconciliation Action -  to be used at the direction of the issuer to fix record keeping errors with bitcoin and token balances."
+  validation: AssetCreation
+  rejection: Rejection
 
 rules:
-  fee: 546
-  inputs: 
-    - name: Contract
-      label: "Contract Public Address"
+  fee:
+  inputs:
+    - name: 
+      label: Contract Public Address
+      comments: 
 
   outputs:
-    - name: User
-      label: "Target Public Address"
-      description: "546 minimum.  If X bitcoin needs to be sent to the address, then this value will be X."
+    - name: 
+      label: Target Public Address
+      comments: 546 minimum.  If X bitcoin needs to be sent to the address, then this value will be a X.
 
-    - name: Contract
-      label: "Contract Public Address"
-      description: "Change, minimum 546"
+    - name: 
+      label: Contract Fee Address
+      comments: Contract Operator's Fee
+
+    - name: 
+      label: OP_RETURN (Confiscation Action)
+      comments: Only one Tokenized action (excluding Message actions) per txn.  Action payload is always the last index of the txn outputs.  There is no limit to the number of M1 (message) actions per txn. 
+
+    - name: 
+      label: Miner's Fee
+      comments: ~550-1000 Bytes to account for return data and txn data.
 
 fields:
-  - name: ActionPrefix
-    label: "Action Prefix"
-    description: "Reconciliation"
-    type: STRING
-    size: 2
+  - name: PUSHDATAINSTRUCTION
+    label: Push Data
+    description: "PUSHDATA 13 bytes for Protocol Identifer"
+    type: opcode
+    size: 1
+    example hex: 0d
+    example value: "13"
+    notes: "Cannot be changed by issuer, operator, or smart contract."
+
+  - name: ProtocolID
+    label: Protocol Identifier
+    description: "Tokenized ID Prefix.  tokenized.com"
+    type: string
+    size: 13
+    example hex: 746f6b656e697a65642e636f6d
+    example value: "tokenized.com"
+    notes: ""
+
+  - name: OP_PUSHDATA
+    label: Push Data
+    description: "PACKET LENGTH, PUSHDATA1 (76), PUSHDATA2 (77), or PUSHDATA4 (78) depending on total size of action payload."
+    type: opcode
+    size: 
+    example hex: aN
+    example value: ""
+    notes: "Cannot be changed by issuer, operator or smart contract."
+
+  - name: LenActionPayload
+    label: Length of Action Payload
+    description: "Length of the action message (0 - 65,535 bytes). 0 if pushdata length <76B, 1 byte if PUSHDATA1 is used, 2 bytes if PUSHDATA2 and 4 bytes if PUSHDATA4."
+    type: pushdata_length
+    size: 1
+    example hex: 15
+    example value: "21"
+    notes: "Depends on Action Payload"
 
   - name: Version
-    label: "Version"
-    description: "For data parsing/interpretation in the event of protocol upgrades."
-    type: UINT
+    label: Version
+    description: "255 reserved for additional versions. Tokenized protocol versioning."
+    type: uint8
     size: 1
+    example hex: 00
+    example value: "0"
+    notes: "Can be changed by Issuer or Operator at their discretion.  Smart Contract will reject if it hasn't been updated to interpret the version."
 
-  - name: AssetType
-    label: "Asset Type"
-    description: "eg. Share, Bond, Ticket"
-    type: STRING
-    size: 3
+  - name: ActionPrefix
+    label: Action Prefix
+    description: "Reconciliation: The smart contract uses the Reconciliation actionbitcoin to fix users' token and bitcoin balances that may be out of whack for whatever reason.  This can be a manual fix by the issuer or smart contract operator, or it can be automated with software, but it is outside of the scope of the standard smart contract. "
+    type: string
+    size: 2
+    example hex: 4535
+    example value: "E5"
+    notes: "Cannot be changed by issuer, operator or smart contract."
 
-  - name: AssetID
-    label: "Asset ID"
-    description: "Randomly generated base58 string.  Each Asset ID should be unique.  However, a Asset ID is always linked to a Contract that is identified by the public address of the Contract wallet. The Asset Type can be the leading bytes - a convention - to make it easy to identify that it is a token by humans."
-    type: STRING
-    size: 32
+  - name: QtyofAddresses
+    label: Qty of Addresses
+    description: "0 - 65,535 bytes"
+    type: uint8
+    size: 2
+    example hex: aN
+    example value: ""
+    notes: ""
 
-  - name: RefTxnID
-    label: "Ref Txn ID"
-    description: "The settlement action that was dropped from the network."
-    type: SHA
-    size: 32
-
-  - name: TargetAddressQty
-    label: "Target Address Qty"
+  - name: AddressXQty
+    label: Address X Qty
     description: "Target's token balance after reconciliation. To be calculated by the amount of tokens to amend and the amount they own already."
-    type: UINT
+    type: uint64
     size: 8
+    example hex: 0000000000002710
+    example value: "10000"
+    notes: ""
 
-  - name: Timestamp
-    label: "Timestamp"
-    description: "Timestamp of when the smart contract created the Reconciliation action."
-    type: TIME
-    size: 8
-
-  - name: Message
-    label: "Message"
-    description: "Explanation. No personal information to be given away.  Privacy to be respected as much as possible."
-    type: STRING
-    size: 61
